<resources>
    <string name="app_name">Storezaap</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="account">Account</string>
    <string name="storezaap">Storezaap</string>
    <string name="logout">Logout</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="service">Service</string>
    <string name="store">Store</string>
    <string name="create_new_account">Create new Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login_here">Already have an Account? Login here</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="new_user_sign_up_here">New User ? Sign Up here</string>
</resources>