<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.drawerlayout.widget.DrawerLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start"
        android:fitsSystemWindows="true">


        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/white"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#11949494"
                android:orientation="vertical"
                tools:context=".activities.ProfileActivity">

                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:theme="@style/Theme.StorezaapDemo.AppBarOverlay">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingTop="40dp">

                        <com.makeramen.roundedimageview.RoundedImageView
                            android:id="@+id/imageProfile"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@mipmap/ic_launcher"
                            app:riv_border_width="1dp"
                            app:riv_oval="true" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/etname"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/storezaap"
                                android:textColor="#ffffff"
                                android:textSize="20sp"
                                android:textStyle="italic" />

                            <View
                                android:layout_width="100dp"
                                android:layout_height="1dp"
                                android:layout_margin="2dp"
                                android:background="#7AFFFFFF" />

                            <TextView
                                android:id="@+id/etemail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textColor="#ffffff"
                                android:textSize="14sp" />

                        </LinearLayout>

                    </LinearLayout>

                </com.google.android.material.appbar.AppBarLayout>


                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/nav_home_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_margin="15dp"
                                    android:src="@drawable/home" />

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="10dp"
                                        android:text="@string/home"
                                        android:textColor="#2d2d2d"
                                        android:textSize="18sp" />


                                </RelativeLayout>

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/nav_store"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_margin="15dp"
                                    android:src="@drawable/services" />

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="10dp"
                                        android:text="@string/store"
                                        android:textColor="#2d2d2d"
                                        android:textSize="18sp" />

                                </RelativeLayout>

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/nav_service"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_margin="15dp"
                                    android:src="@drawable/support" />


                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="10dp"
                                        android:text="@string/service"
                                        android:textColor="#2d2d2d"
                                        android:textSize="18sp" />


                                </RelativeLayout>

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/nav_news"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_margin="15dp"
                                    android:src="@drawable/news" />

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="10dp"
                                        android:text="@string/news"
                                        android:textColor="#2d2d2d"
                                        android:textSize="18sp" />


                                </RelativeLayout>

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/nav_privacy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_margin="15dp"
                                    android:src="@drawable/privacy" />

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="10dp"
                                        android:text="@string/privacy_policy"
                                        android:textColor="#2d2d2d"
                                        android:textSize="18sp" />


                                </RelativeLayout>

                            </LinearLayout>

                        </LinearLayout>


                        <LinearLayout
                            android:id="@+id/nav_logout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:id="@+id/image7"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_margin="15dp"
                                    android:src="@drawable/logout" />

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical">

                                    <TextView
                                        android:id="@+id/textView7"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="10dp"
                                        android:text="@string/logout"
                                        android:textColor="#2d2d2d"
                                        android:textSize="18sp" />


                                </RelativeLayout>

                            </LinearLayout>

                        </LinearLayout>


                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

            </LinearLayout>
        </com.google.android.material.navigation.NavigationView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.StorezaapDemo.AppBarOverlay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/Theme.StorezaapDemo.PopupOverlay" />

            </com.google.android.material.appbar.AppBarLayout>


            <fragment
                android:id="@+id/nav_host_fragment_content_main"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/app_bar"
                android:layout_above="@id/bottom_navigation_view"
                app:defaultNavHost="true"
                app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_bar"
                app:navGraph="@navigation/mobile_navigation" />


            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation_view"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/windowBackground"
                app:elevation="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:menu="@menu/bottom_nav_menu" />

        </RelativeLayout>


    </androidx.drawerlayout.widget.DrawerLayout>


</layout>